fix spacing between text and dropdown arrow in parliament selector

--- a/www/docs/style/sass/app.scss
+++ b/www/docs/style/sass/app.scss
@@ -134,7 +134,7 @@ ul, li {
 
                         &::after {
                             top: 40px;
-                            right: -15px;
+                            right: -20px;
                         }
                     }
                 }
